Fix path resolution in planner's unit-tests